fixes on table alignment

--- a/djranker/static/style.css
+++ b/djranker/static/style.css
@@ -2,6 +2,7 @@ body            { font-family: "Lucida Sans Unicode", "Lucida Grande", sans-seri
 h1              { color: rgba(92, 98, 102, 1); }
 h1              { margin: 0; }
 h1              { border-bottom: 2px solid #eee;}
+h2              {text-align: center;}
 
 .button-wrap    {text-align: center;}
 
@@ -15,9 +16,11 @@ h1              { border-bottom: 2px solid #eee;}
 
 table.dataframe, .dataframe th, .dataframe td{
   border: none;
+  text-align:center; 
+  margin-left:auto; 
+  margin-right:auto; 
   border-bottom: 1px solid #C8C8C8;
   border-collapse: collapse;
-  text-align:left;
   padding-right: 100px;
   font-size: 0.9em;
 } 
